2005-06-25  Hagen Moebius  <hagen.moebius@starschiffchen.de>

	* src/framework/ConsoleBackend.
		* Added history managedment to the console.

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberPhysicalEntity.cpp
		* remove the animation from the MotionManager upon deletion, so to avoid the Curse of the Segfault

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/vegetation.material: added green apple material
	* src/components/ogre/modeldefinitions/environment.modeldef.xml: added apple (which is an acorn with a green apple material)

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/Model.h, src/components/ogre/model/XMLModelDefintionSerializer.*
		* added support for particle systems
	*src/components/ogre/EmberPhysicalEntity.cpp
		* when an attribute is changed, check if this should change a particle system
	*src/components/ogre/modeldefinition/environment.modeldef.xml
		* added particles to fire
	*media/materials/textures/smoke.png
	*media/materials/textures/smokecolors.png
	*media/materials/particle/smoke.particle
	*media/materials/material/smoke.material
		* added smoke textures

2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Ember.kdevelop: updated the project file

2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainPage.cpp: added some debug output

2005-06-23  Erik Hjortsberg  <erik@erik>

	* src/components/ogre/EmberEntityFactory.*, src/components/ogre/modeldefinitions/environment.modeldef.xml
		* removed the list of non-physical entities and put that info into the modeldef instead

2005-06-23  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/widgets/ServerBrowserWidget.*
		* allow enter to be used in the editbox for connecting

2005-06-23  Erik Hjortsberg   <erik@katastrof.nu>


	* src/components/ogre/widgets/InspectWidget.*